fix: feat the gaps and spaces

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 }
 main{
     display: flex;
-    gap: 30px;
+    gap: 50px;
 }
 .section1{
     width: 15%;
@@ -143,7 +143,6 @@ main{
     display: flex;
     flex-direction: column;
     gap: 25px;
-    margin-top: 20px;
 }
 .card{
     display: flex;
@@ -157,8 +156,8 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 850px;
-    height: 370px;
+    width: 100%;
+    height: 100%;
     background-image: url(../assets/pishro.jpg);
     border-radius: 5px;
     background-size: cover;
@@ -281,10 +280,11 @@ main{
     color: var(--txt);
 }
 .releases-body{
+    width: 100%;
     overflow-x: scroll;
     display: flex;
     flex-direction: row;
-    gap: 13px;
+    gap: 23px;
     height: 250px;
     margin-top: 7px;
 }
@@ -335,6 +335,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 .releases-head h1{
     color: var(--txt);
@@ -347,7 +348,7 @@ main{
 .stories-body{
     display: flex;
     align-items: center;
-    gap: 55px;
+    gap: 65px;
     overflow-x: scroll;
 }
 .stories-body::-webkit-scrollbar{
